Option added to export max number listings per csv file to fix out of memory issue - FIXED
Body classes added to GD pages for each page - ADDED
The recent reviews widget ignores 1 star reviews - FIXED
Added ability to show upgrade warning messages for major changes - ADDED
Multiselect custom field "Display Type" option doesn't save on first attempt - FIXED

v1.5.5
Added charset parameter to case conversion functions - ADDED
Avada compat CSS updated to adjust search button position - FIXED
Filter `geodir_filter_title_variables_location_arr` added to filter the location variables for titles/meta - ADDED
GD category page CPT slug does not change when switching language with WPML - FIXED
Search form url not keeping the language in the url with WPML - FIXED
Homepage page_id query var not set and can cause problems with Yoast SEO - FIXED
Some changes for PHP7 - CHANGED
All CPT text are translatable using db translation - FIXED
New actions added to customize listing not found message - CHANGED
Advance search submit button fixed - FIXED
Pagination not working when location selected - FIXED
Shortcode added for CPT categories widget - ADDED
Breadcrumb HTML does not wrap correctly for a small screens or in a mobile - FIXED
Added geodir_review_form_args, gd_rating_form_html, geodir_get_rating_stars_html filters - ADDED
Post type archive link not working when "add city slug in listing urls" for location - FIXED
Tested with WP 4.4 - NOTICE
Blog archive page shows home page content even selected as a posts page - FIXED

v1.5.4
Event after map marker opened extended to prevent FireFox reclosing marker with server side clustering addon - FIXED
Map popup image margins and padding set to 0 !important for compatibility - CHANGED
Bootstrap styles can alter the popular categories count number position - FIXED
Location switcher ajax search not working with accents chars - FIXED
Best of widget Option added to display reviews in excerpt - ADDED